# luiggi-clase4-django

./: .env.example  .gitignore  Dockerfile  Makefile  docker-compose.yml  manage.py  pyproject.toml  test.py
auth/: forms.py  models.py
auth/graphql/entities/: user.py
auth/graphql/mutations/authentication/: __init__.py  (+1 more)
auth/migrations/: 0001_initial.py  0002_auto_20260203_0026.py  0003_user_last_logged_at.py
auth/sentences/auth.User/: t0001_set_api_token.sql
auth/utils/: check_session.py
categories/: enums.py  forms.py  models.py
categories/fixtures/: categories.json
categories/graphql/entities/: category.py
categories/graphql/enums/: __init__.py  category_type.py
categories/graphql/inputs/: __init__.py  category.py
categories/management/commands/: categories_manager.py  lab.py
categories/migrations/: 0001_initial.py  0002_category_description.py  0003_alter_category_kind.py
luiggi/: asgi.py  settings.py  urls.py  views.py  wsgi.py
luiggi/graphql/: schema.py
luiggi/graphql/bases/: __init__.py  mutation.py  query.py
luiggi/graphql/enums/: status.py
luiggi/graphql/scalars/: __init__.py  json.py
luiggi/migrations/: 0001_initial.py
luiggi/utils/: uuid.py
movements/: models.py
movements/management/commands/: simulate_movements.py
movements/migrations/: 0001_initial.py
telemetry/: models.py
telemetry/management/commands/: get_avg.py
telemetry/migrations/: 0001_initial.py  0002_auto_20260127_2320.py  0003_remove_telemetry_sensors.py  0004_telemetry_updated_at.py  0005_alter_telemetry_options.py  0006_alter_telemetry_table.py
(+8 files in other folders)
